test/samples/invalid/deprecated_no_hash.warning.sol
contract Foo {
    /// if_succeeds true;
    function foo() public {}
}
